--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -2,6 +2,7 @@
     flex: 1;
     width: 100%;
     flex-direction: column;
+    gap: 1rem;
   }
   
   .app__skills-sub-section{
@@ -17,7 +18,7 @@
   }
   .app__skills-container {
     width: 80%;
-    margin-top: 3rem;
+    // margin-top: 3rem;
   
     display: flex;
     flex-direction: row;
@@ -32,10 +33,10 @@
     flex: 1;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
   
-    margin-right: 5rem;
+    // margin-right: 5rem;
   
     @media screen and (max-width: 900px) {
       margin-right: 0;
@@ -172,4 +173,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
   }
