--- a/frontend_react/src/container/Experience/Experience.scss
+++ b/frontend_react/src/container/Experience/Experience.scss
@@ -39,10 +39,20 @@
                     
 .app__exp_skills{
     margin-top: 1rem;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    /* gap: 1rem; */
+    flex-wrap: wrap;
 }
 .app__skill-name{
     margin: 0.4rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
+    @media screen and (max-width: 450px){
+        padding: 0.25rem;
+        border-radius: 0.25rem;
+    }
 }
