--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -45,7 +45,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
   
     .app__work-item {
       width: 270px;
