--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -8,7 +8,7 @@
   .app__skills-sub-section{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 
     @media screen and (max-width: 900px) {
       width: 100%;
